--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .titel{
-    background-color:blue;
+    background-color:rgba(0, 204, 255, 0.902);
     color: white;
     font-size: 350%;
     height: 80px;
