--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,19 @@
 body {
   background-color: black;
   margin: 0 auto;
-  font-family: 'Antonio', 'Arial Narrow', 'Avenir Next Condensed', sans-serif;
+  font-family: "Antonio", "Arial Narrow", "Avenir Next Condensed", sans-serif;
 }
 
-.titel{
-    background-color:rgba(0, 204, 255, 0.902);
-    color: white;
-    font-size: 350%;
-    height: 80px;
-    border-radius: 0 50px 50px 0;
-    padding: 5px 0px 0px 20px;
-    margin-right: 20px;
-
+.titel {
+  background-color: rgba(0, 204, 255, 0.902);
+  color: white;
+  font-size: 350%;
+  height: 80px;
+  border-radius: 0 50px 50px 0;
+  padding: 5px 0px 0px 20px;
+  margin-right: 20px;
 }
 
-‚
+.card {
+  display: flex;
+}
