--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,85 @@ body {
   font-family: "Antonio", "Arial Narrow", "Avenir Next Condensed", sans-serif;
 }
 
+header {
+  background-color: black;
+}
+
+main {
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+}
+
 .titel {
-  background-color: rgba(0, 204, 255, 0.902);
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background-color: rgba(0, 204, 255);
   color: white;
   font-size: 350%;
-  height: 80px;
+  height: 120px;
+  width: 100%;
+  border: 20px solid black;
   border-radius: 0 50px 50px 0;
   padding: 5px 0px 0px 20px;
-  margin-right: 20px;
+  margin: 0 20px 0 0;
+
 }
 
 .card {
   display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position:relative
+  color: white;
+  font-size: 150%;
+  height: 300px;
+  width: 80%;
+  background-color: rgba(226, 58, 43, 0.905);
+  margin: 10px 20px 20px 20px;
+  padding: 20px;
+  border: 1px solid rgba(0, 204, 255);
+  border-radius: 20px;
+}
+
+.show {
+  background-color: aqua;
+  font-size: 150%;
+  color: blueviolet;
+  height: 100px;
+  width: 400px;
+  border-radius: 10px;
+  padding: ;
+  text-align: center;
+  justify-content: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+li {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.bookmark {
+  background-color: azure;
+  height: 40px;
+  width:  30px;
+  border: 1 solid rgba(0, 204, 255);
+  border-radius: 0 0 20px 20px;
+  position: absolute;
+  top: -10px;
+  right: 40px;
 }
