--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,7 @@ header {
   background-color: black;
 }
 
-main {
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-}
+
 
 .titel {
   position: fixed;
@@ -34,7 +29,14 @@ flex-direction: column;
   margin: 0 20px 0 0;
 
 }
-
+main {
+display: flex;
+position:relative;
+top:120px;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+}
 .card {
   display: flex;
   position: relative;
@@ -46,7 +48,7 @@ flex-direction: column;
   font-size: 150%;
   height: 300px;
   width: 80%;
-  background-color: rgba(226, 58, 43, 0.905);
+  background-color: orange;
   margin: 10px 20px 20px 20px;
   padding: 20px;
   border: 1px solid rgba(0, 204, 255);
