--- a/css/styles.css
+++ b/css/styles.css
@@ -92,3 +92,24 @@ li {
   top: -10px;
   right: 40px;
 }
+
+footer {
+  background-color: rgba(0, 204, 255);
+}
+
+nav {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  justify-content: space-between;
+  z-index: 1;
+  height: 120px;
+  width: 100%;
+  border: 20px solid black;
+  border-radius: 0 50px 50px 0;
+  padding: 5px 0px 0px 20px;
+  margin: 0 20px 0 0;
+}
+img {
+  height: 90px;
+}
