--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ li {
   text-align: center;
   padding: 16px;
   text-decoration: none;
+  flex-wrap: wrap;
 }
 
 .bookmark {
@@ -95,21 +96,17 @@ li {
 
 footer {
   background-color: rgba(0, 204, 255);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 1;
 }
 
-nav {
+.nav {
   display: flex;
-  position: absolute;
-  bottom: 0;
-  justify-content: space-between;
-  z-index: 1;
-  height: 120px;
-  width: 100%;
-  border: 20px solid black;
-  border-radius: 0 50px 50px 0;
-  padding: 5px 0px 0px 20px;
-  margin: 0 20px 0 0;
+  justify-content: space-around;
 }
 img {
-  height: 90px;
+  height: 50px;
 }
