--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ header {
   position: fixed;
   top: 0;
   z-index: 1;
-  background-color: rgba(0, 204, 255);
+  background-color: #7788ff;
   color: white;
   font-size: 350%;
   height: 120px;
@@ -48,7 +48,7 @@ main {
   background-color: orange;
   margin: 10px 20px 20px 20px;
   padding: 20px;
-  border: 1px solid rgba(0, 204, 255);
+  border: 1px solid #7788ff;
   border-radius: 20px;
 }
 
@@ -63,7 +63,7 @@ main {
   justify-content: center;
 }
 .show:hover {
-  background-color: rgba(0, 204, 255);
+  background-color: #7788ff;
   cursor: pointer;
 }
 
@@ -87,7 +87,7 @@ li {
   background-color: azure;
   height: 40px;
   width: 30px;
-  border: 1 solid rgba(0, 204, 255);
+  border: 3px solid#7788ff;
   border-radius: 0 0 20px 20px;
   position: absolute;
   top: -10px;
@@ -95,7 +95,7 @@ li {
 }
 
 footer {
-  background-color: rgba(0, 204, 255);
+  background-color: #7788ff;
   position: fixed;
   bottom: 0;
   width: 100%;
