--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+@import "./components/button.css";
+@import "./components/card.css";
+@import "./components/header.css";
+@import "./components/navigation.css";
+@import "global.css";
+
 body {
   background-color: black;
   margin: 0 auto;
