--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,9 @@
-* {
-  box-sizing: border-box;
-}
-
-@import "./components/button.css";
-@import "./components/card.css";
-@import "./components/header.css";
-@import "./components/navigation.css";
+@import "components/button.css";
+@import "components/card.css";
+@import "components/header.css";
+@import "components/navigation.css";
 @import "global.css";
 
-body {
-  background-color: black;
-  margin: 0 auto;
-  font-family: "Antonio", "Arial Narrow", "Avenir Next Condensed", sans-serif;
-}
-
-header {
-  background-color: black;
-}
-
-.titel {
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  background-color: #7788ff;
-  color: white;
-  font-size: 350%;
-  height: 120px;
-  width: 100%;
-  border: 20px solid black;
-  border-radius: 0 50px 50px 0;
-  padding: 5px 0px 0px 20px;
-  margin: 0 20px 0 0;
-}
 main {
   display: flex;
   position: relative;
@@ -39,38 +11,6 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-.card {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  color: white;
-  font-size: 150%;
-  height: 300px;
-  width: 80%;
-  background-color: orange;
-  margin: 10px 20px 20px 20px;
-  padding: 20px;
-  border: 1px solid #7788ff;
-  border-radius: 20px;
-}
-
-.show {
-  background-color: aqua;
-  font-size: 150%;
-  color: blueviolet;
-  height: 100px;
-  width: 400px;
-  border-radius: 10px;
-  text-align: center;
-  justify-content: center;
-}
-.show:hover {
-  background-color: #7788ff;
-  cursor: pointer;
 }
 
 ul {
@@ -87,17 +27,6 @@ li {
   padding: 16px;
   text-decoration: none;
   flex-wrap: wrap;
-}
-
-.bookmark {
-  background-color: azure;
-  height: 40px;
-  width: 30px;
-  border: 3px solid#7788ff;
-  border-radius: 0 0 20px 20px;
-  position: absolute;
-  top: -10px;
-  right: 40px;
 }
 
 footer {
@@ -211,4 +140,9 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
