--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ img {
 
 .profPicName {
   display: flex;
+
   color: white;
   font-size: 200%;
   border-radius: 20px;
@@ -86,6 +87,7 @@ img {
   display: flex;
   flex-direction: column;
   color: white;
+  margin: 20px;
 }
 
 .ProAbout {
@@ -93,15 +95,18 @@ img {
   border-radius: 20px;
   height: 50px;
   width: 200px;
+  padding: 10px 0 0 20px;
 }
 
 .aboutText {
+  flex: 1;
+  flex-wrap: wrap;
+  text-align: justify;
   border: 2px solid orange;
   border-radius: 20px;
   height: 150px;
-  width: 400px;
+
   padding: 20px;
-  margin: 10px;
 }
 
 /* The switch - the box around the slider */
