--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ img {
 
 .profPicName {
   display: flex;
-
+  flex-wrap: wrap;
   color: white;
   font-size: 200%;
   border-radius: 20px;
@@ -81,10 +81,12 @@ img {
   width: 80%;
   padding: 20px;
   background-color: rgb(120, 120, 120);
+  vertical-align: middle;
 }
 
 .ProInfo {
   display: flex;
+
   flex-direction: column;
   color: white;
   margin: 20px;
@@ -105,8 +107,34 @@ img {
   border: 2px solid orange;
   border-radius: 20px;
   height: 150px;
-
   padding: 20px;
+}
+
+.counters {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  color: white;
+  margin: 20px;
+}
+
+.numCards,
+.numBookmarks {
+  border: 2px solid orange;
+  border-radius: 20px;
+  height: 80px;
+  width: 160px;
+  padding: 10px;
+  margin: 20px;
+}
+
+.cardSign {
+  background-color: orange;
+  border-radius: 10px;
+  border: 1px solid #7788ff;
+  height: 60px;
+  width: 80px;
+  padding: 15px 0 0 8px;
 }
 
 /* The switch - the box around the slider */
