--- a/styles.css
+++ b/styles.css
@@ -17,32 +17,17 @@ h2,
 h3 {
   color: white;
 }
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-li {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-  flex-wrap: wrap;
-}
 
 .profPicName {
   display: flex;
   flex-wrap: wrap;
-  color: white;
-  font-size: 200%;
-  border-radius: 20px;
-  height: 250px;
-  width: 80%;
   justify-content: space-around;
   align-items: center;
+  color: white;
+  font-size: 200%;
+  border-radius: 1.25rem;
+  height: 250px;
+  width: 80%;
 }
 
 .profPic {
@@ -51,17 +36,17 @@ li {
   border-radius: 50%;
   height: 200px;
   width: auto;
-  padding: 20px;
+  padding: 1.25rem;
   background-color: rgb(120, 120, 120);
 }
 
 .profName {
   height: 150px;
   border: 2px solid orange;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   height: 200px;
   width: 80%;
-  padding: 20px;
+  padding: 1.25rem;
   background-color: rgb(120, 120, 120);
   vertical-align: middle;
 }
@@ -71,12 +56,12 @@ li {
 
   flex-direction: column;
   color: white;
-  margin: 20px;
+  margin: 1.25rem;
 }
 
 .ProAbout {
   border: 2px solid orange;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   height: 50px;
   width: 200px;
   padding: 10px 0 0 20px;
@@ -87,7 +72,7 @@ li {
   flex-wrap: wrap;
   text-align: justify;
   border: 2px solid orange;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   height: 150px;
   padding: 20px;
 }
@@ -103,41 +88,45 @@ li {
 .numCards,
 .numBookmarks {
   display: flex;
+  align-items: center;
+  text-align: center;
   border: 2px solid orange;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   height: 80px;
   width: 160px;
   padding: 10px;
   margin: 20px;
 }
 
-.cardSign {
+.cardImage {
   background-color: orange;
   border-radius: 10px;
   border: 1px solid #7788ff;
   height: 50px;
   width: 80px;
-  padding: 15px 0 0 8px;
+  padding: 15px 0 0 0px;
 }
 
 .countCards,
 .countBookmarks {
+  flex: 1;
   font-size: xx-large;
   font-weight: bolder;
 }
 
 .switcher {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .settings {
-  align-self: flex-start;
+  display: flex;
+
   border: 2px solid orange;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   height: 50px;
   width: 200px;
-  padding: 0 0 20px 20px;
 }
 
 .toggle > div {
