--- a/components/navigation.css
+++ b/components/navigation.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: #7788ff;
+  background-color: var(--blue-color);
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -21,7 +21,7 @@ ul {
 li {
   float: left;
   display: block;
-  color: white;
+  color: var(--colorText-dark);
   text-align: center;
   padding: 16px;
   text-decoration: none;
@@ -32,7 +32,7 @@ img {
   height: 50px;
 }
 .aktiv {
-  background-color: orange;
+  background-color: var(--orange-color);
   margin-top: 5px;
   border-radius: 20px;
 }
