--- a/components/card.css
+++ b/components/card.css
@@ -20,8 +20,8 @@
   background-color: aqua;
   font-size: 150%;
   color: blueviolet;
-  height: 100px;
-  width: 400px;
+  height: 20%;
+  width: 40%;
   border-radius: 10px;
   text-align: center;
   justify-content: center;
