--- a/components/navigation.css
+++ b/components/navigation.css
@@ -3,7 +3,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 80px;
+  height: 4.6rem;
   z-index: 1;
 }
 
@@ -29,10 +29,10 @@ li {
 }
 
 img {
-  height: 50px;
+  height: 3.125rem;
 }
 .aktiv {
   background-color: var(--orange-color);
-  margin-top: 5px;
-  border-radius: 20px;
+  margin-top: 0.313rem;
+  border-radius: 1.25rem;
 }
