add styles for new card

--- a/components/card.css
+++ b/components/card.css
@@ -4,16 +4,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: relative;
+
   color: white;
   font-size: 150%;
-  height: 300px;
+  height: 350px;
   width: 80%;
   background-color: var(--orange-color);
   margin: 10px 1.25rem 1.25rem 1.25rem;
   padding: 1.25rem;
   border: 1px solid var(--blue-color);
   border-radius: 1.25rem;
+}
+
+.answer {
+  visibility: hidden;
+}
+.answer--show {
+  visibility: visible;
 }
 
 .show {
@@ -37,10 +44,10 @@
   border: 3px solid var(--blue-color);
   border-radius: 0 0 1.25rem 1.25rem;
   position: absolute;
-  top: -290px;
+  top: -340px;
   right: -290px;
 }
-.bookmarkActive {
+.bookmark--activ {
   background-color: var(--blue-color);
 }
 
@@ -60,11 +67,38 @@
 
   /* Position the tooltip */
   position: absolute;
-  top: -270px;
+  top: -310px;
   right: -270px;
   z-index: 1;
 }
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+form {
+  width: 60%;
+  height: 60%;
+  border: 4px solid var(--orange-color);
+  border-radius: 1.25rem;
+  padding: 2rem;
+}
+
+textarea {
+  border: 4px solid var(--orange-color);
+  border-radius: 1.25rem;
+}
+
+.submitButton {
+  border: 4px solid var(--orange-color);
+  border-radius: 1.25rem;
+  width: 7rem;
+  height: 2rem;
+}
+
+.categorie {
+  border: 4px solid var(--orange-color);
+  border-radius: 1.25rem;
+  width: 10rem;
+  height: 2rem;
 }
