add hover style

--- a/components/navigation.css
+++ b/components/navigation.css
@@ -36,3 +36,9 @@ img {
   margin-top: 0.313rem;
   border-radius: 1.25rem;
 }
+
+li:hover {
+  background-color: var(--orange-color);
+  margin-top: 0.313rem;
+  border-radius: 1.25rem;
+}
