--- a/components/card.css
+++ b/components/card.css
@@ -37,6 +37,7 @@
   background-color: var(--blue-color);
   cursor: pointer;
 }
+
 .bookmark {
   background-color: azure;
   height: 40px;
@@ -89,7 +90,7 @@ textarea {
   border-radius: 1.25rem;
 }
 
-.submitButton {
+.add-Button {
   border: 4px solid var(--orange-color);
   border-radius: 1.25rem;
   width: 7rem;
