--- a/components/card.css
+++ b/components/card.css
@@ -88,6 +88,7 @@ form {
 textarea {
   border: 4px solid var(--orange-color);
   border-radius: 1.25rem;
+  margin-top: -1rem;
 }
 
 .add-Button {
@@ -102,4 +103,12 @@ textarea {
   border-radius: 1.25rem;
   width: 10rem;
   height: 2rem;
+  padding-left: 0.7rem;
+}
+
+#charCounterQuestion,
+#charCounterAnswer {
+  color: var(--colorText-dark);
+  margin-top: -0.1rem;
+  text-align: center;
 }
