--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import "components/button.css";
-@import "components/card.css";
-@import "components/header.css";
-@import "components/navigation.css";
+@import "components/button/button.css";
+@import "components/card/card.css";
+@import "components/header/header.css";
+@import "components/navigation/navigation.css";
 @import "global.css";
 
 :root {
